Fix height for minister list on mobile for past prime minister page
Re task 42 https://www.pivotaltracker.com/story/show/65640954

--- a/app/assets/stylesheets/frontend/views/_historic-appointments.scss
+++ b/app/assets/stylesheets/frontend/views/_historic-appointments.scss
@@ -39,7 +39,9 @@
       .person-excerpt {
         width: $full-width;
         float: none;
-        min-height: 280px;
+        @include media(tablet) {
+          min-height: 280px;
+        }
 
         h3 {
           @include core-19;
